A fix that seems to work with headless testing
[ADD] Some Args in maven surefile plugin of View/pom.xml that export com.sun.glass.ui